[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gun/Gun.gd" type="Script" id=1]

[node name="Gun3D" type="Spatial" index="0"]

script = ExtResource( 1 )
can_fire = true
auto_fire = true
auto_reload = true
ammo = -1
clip_size = 1

[node name="ShotDelayTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="ReloadDelayTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="BulletContainer" type="Node" parent="." index="2"]

_sections_unfolded = [ "Pause" ]

[node name="MuzzleContainer" type="Spatial" parent="." index="3"]


